# CIFAR10

./: .gitignore  README.md  pyproject.toml  train.py
CIFAR_CNN/models/: cnn.py  train_model.py
cifar_cnn/data/: data_loader.py
cifar_cnn/models/: ResSKBlock.py  SKConv.py  cnn.py  train_model.py  vit.py
cifar_cnn/train/: train_model.py
climex/data/: data_loader.py
climex/models/: ResSKBlock.py  SKConv.py  cnn.py  vit.py
climex/train/: train_model.py
conf/: config.yaml
conf/datasets/: cifar10.yaml  stl10.yaml
conf/logger/: wandb.yaml
conf/model/: sknet.yaml  vit.yaml
models/: baseline_model.py
nootebooks/: 0.1-create-model.ipynb  0.2-test-module.ipynb  0.3-upgrade-model.ipynb  0.4-add-vit-model.ipynb
outputs/2023-11-30/03-29-45/.hydra/: config.yaml  hydra.yaml
src/data/: data_loader.py
src/models/: train_model.py
